--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,13 @@
-torch==1.13.0
-transformers==4.23.1
-diffusers==0.11.1
+torch
+transformers
+diffusers
+omegaconf
+einops
+pycocotools
+timm
+opencv-python
+lpips
+scikit-image
+scikit-learn
+wandb
+datasets
